--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="Calculator App" />
+    <meta name="title" property="og:title" content="Calculator" />
+    <meta property="og:type" content="_" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51813466692_6960b53bde_k.jpg"
+      width="1920"
+      height="1080"
+      alt="Screenshot (22)"
+    />
+    <meta name="description" property="og:description" content="Website" />
+    <meta name="author" content="Adhul Krishna A S" />
+
     <title>Glassmorphism Calculator</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
