--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="description" content="Calculator App" />
-    <meta name="title" property="og:title" content="Calculator" />
+    <meta name="title" property="og:title" content="Calculator -HTML,CSS,JS" />
     <meta property="og:type" content="_" />
     <meta
       name="image"
