--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
           <span class="num" onclick="document.calc.text.value +='8'">8</span>
           <span class="num" onclick="document.calc.text.value +='9'">9</span>
           <span class="num" onclick="document.calc.text.value +='-'">-</span>
-          <span class="num" onclick="document.calc.calc.text.value +='4'"
-            >4</span
-          >
+          <span class="num" onclick="document.calc.text.value +='4'">4</span>
           <span class="num" onclick="document.calc.text.value +='5'">5</span>
           <span class="num" onclick="document.calc.text.value +='6'">6</span>
           <span class="num plus" onclick="document.calc.text.value +='+'"
